fixed Michael's bug and add lower/upper bounds (configurable)

--- a/nudge-config.json
+++ b/nudge-config.json
@@ -2,6 +2,10 @@
 	"incoming": ["primary"],
 	"outgoing": ["email"],
 	"ignore": [6, 0],
+	"bounds": {
+		"lower": 6,
+		"upper": 10
+	},
 	"userUsageTypes": {
 		"Heavy": 20,
 		"Neutral": 5,
