--- a/nudge-config.json
+++ b/nudge-config.json
@@ -6,6 +6,10 @@
 		"lower": 6,
 		"upper": 10
 	},
+	"suggestion": {
+		"start": 19,
+		"end": 22
+	},
 	"userUsageTypes": {
 		"Heavy": 20,
 		"Neutral": 5,
