--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.3.1",
+    "@sendgrid/mail": "^6.3.1",
+    "bcrypt": "^3.0.5",
     "fetch": "^1.1.0",
     "googleapis": "^37.1.0",
     "meteor-node-stubs": "^0.4.1",
