--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^3.0.5",
     "fetch": "^1.1.0",
     "googleapis": "^37.1.0",
+    "jstz": "^2.1.1",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
