--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@babel/runtime": "^7.3.1",
     "@sendgrid/mail": "^6.3.1",
     "bcrypt": "^3.0.5",
+    "canvas": "^2.4.1",
+    "d3": "^5.9.2",
     "fetch": "^1.1.0",
     "googleapis": "^37.1.0",
+    "jsdom": "^14.0.0",
     "jstz": "^2.1.1",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
+    "node-fetch-polyfill": "^2.0.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-redux": "^6.0.0",
