--- a/nudge-config.json
+++ b/nudge-config.json
@@ -7,10 +7,11 @@
 		"upper": 10
 	},
 	"suggestion": {
-		"start": 19,
-		"end": 22,
+		"start": 10,
+		"end": 17,
 		"max": 3
 	},
+	"suggestionText": "Seems you have some free time on your calendar today. <br/> Why don't you fill it in with your project or works! Better productivity, better rewards!",
 	"userUsageTypes": {
 		"Heavy": 20,
 		"Neutral": 5,
