--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "node-fetch-polyfill": "^2.0.6",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-dropzone": "^10.1.3",
+    "react-json-tree": "^0.11.2",
+    "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
