--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "requestretry": "^4.0.0"
   },
   "meteor": {
     "mainModule": {
