--- a/nudge-config.json
+++ b/nudge-config.json
@@ -27,5 +27,85 @@
     "send": 9,
     "title": ""
   },
-  "adjustableSendTime": true
+  "adjustableSendTime": true,
+  "eventPreferences": {
+    "productivity": {
+      "self": {
+        "workOnSideProject": {
+          "duration": 120,
+          "timeRange": ["9am-5pm"]
+        }
+      },
+      "work": {
+        "workOnHomework": {
+          "duration": 120,
+          "timeRange": ["1pm-5pm", "8pm-11pm"]
+        },
+        "reviewCourseMaterials": {
+          "duration": 120,
+          "timeRange": ["1pm-5pm", "8pm-11pm"]
+        }
+      }
+    },
+    "wellness": {
+      "physical": {
+        "workout": {
+          "duration": 60,
+          "timeRange": ["8am-10am", "5pm-7pm", "9pm-10pm"]
+        },
+        "playBasketball": {
+          "duration": 60,
+          "timeRange": ["8am-10am", "4pm-7pm"]
+        },
+        "goJogging": {
+          "duration": 60,
+          "timeRange": ["8am-10am", "4pm-7pm"]
+        }
+      },
+      "mental": {
+        "meditationToClearMind": {
+          "duration": 30,
+          "timeRange": ["8am-10am", "9pm-11pm"]
+        },
+        "readToExpandMind": {
+          "duration": 30,
+          "timeRange": ["8am-12pm", "5pm-6pm"]
+        }
+      },
+      "leisure": {
+        "personal": {
+          "readAFictionBook": {
+            "duration": 60,
+            "timeRange": ["8pm-11pm"]
+          },
+          "playVideoGames": {
+            "duration": 60,
+            "timeRange": ["8pm-11pm"]
+          },
+          "spendTimeWithLovedOnes": {
+            "duration": 60,
+            "timeRange": ["8pm-11pm"]
+          }
+        },
+        "social": {
+          "hangOutAtABar": {
+            "duration": 120,
+            "timeRange": ["9pm-11pm"]
+          },
+          "haveAMealWithFriends": {
+            "duration": 90,
+            "timeRange": ["11am-1pm", "5pm-8pm"]
+          },
+          "playBoardGames": {
+            "duration": 60,
+            "timeRange": ["8pm-11pm"]
+          },
+          "goToAMovieWithFriends": {
+            "duration": 120,
+            "timeRange": ["8pm-11pm"]
+          }
+        }
+      }
+    }
+  }
 }
