--- a/nudge-config.json
+++ b/nudge-config.json
@@ -8,8 +8,8 @@
     "upper": 12
   },
   "suggestion": {
-    "start": 12,
-    "end": 18,
+    "start": "07",
+    "end": "23",
     "max": 2
   },
   "suggestionText": "Seems you have some free time on your calendar today. <br/> Why don't you fill it in with your project or works! Better productivity, better rewards!",
@@ -33,17 +33,17 @@
       "self": {
         "workOnSideProject": {
           "duration": 120,
-          "timeRange": ["9am-5pm"]
+          "timeRange": ["09:00-17:00"]
         }
       },
       "work": {
         "workOnHomework": {
           "duration": 120,
-          "timeRange": ["1pm-5pm", "8pm-11pm"]
+          "timeRange": ["13:00-17:00", "20:00-23:00"]
         },
         "reviewCourseMaterials": {
           "duration": 120,
-          "timeRange": ["1pm-5pm", "8pm-11pm"]
+          "timeRange": ["13:00-17:00", "20:00-23:00"]
         }
       }
     },
@@ -51,59 +51,59 @@
       "physical": {
         "workout": {
           "duration": 60,
-          "timeRange": ["8am-10am", "5pm-7pm", "9pm-10pm"]
+          "timeRange": ["08:00-10:00", "17:00-19:00", "21:00-22:00"]
         },
         "playBasketball": {
           "duration": 60,
-          "timeRange": ["8am-10am", "4pm-7pm"]
+          "timeRange": ["08:00-10:00", "16:00-18:00"]
         },
         "goJogging": {
           "duration": 60,
-          "timeRange": ["8am-10am", "4pm-7pm"]
+          "timeRange": ["08:00-10:00", "16:00-19:00"]
         }
       },
       "mental": {
         "meditationToClearMind": {
           "duration": 30,
-          "timeRange": ["8am-10am", "9pm-11pm"]
+          "timeRange": ["08:00-10:00", "21:00-23:00"]
         },
         "readToExpandMind": {
           "duration": 30,
-          "timeRange": ["8am-12pm", "5pm-6pm"]
+          "timeRange": ["08:00-12:00", "17:00-18:00"]
+        }
+      }
+    },
+    "leisure": {
+      "personal": {
+        "readAFictionBook": {
+          "duration": 60,
+          "timeRange": ["20:00-23:00"]
+        },
+        "playVideoGames": {
+          "duration": 60,
+          "timeRange": ["20:00-23:00"]
+        },
+        "spendTimeWithLovedOnes": {
+          "duration": 60,
+          "timeRange": ["20:00-23:00"]
         }
       },
-      "leisure": {
-        "personal": {
-          "readAFictionBook": {
-            "duration": 60,
-            "timeRange": ["8pm-11pm"]
-          },
-          "playVideoGames": {
-            "duration": 60,
-            "timeRange": ["8pm-11pm"]
-          },
-          "spendTimeWithLovedOnes": {
-            "duration": 60,
-            "timeRange": ["8pm-11pm"]
-          }
+      "social": {
+        "hangOutAtABar": {
+          "duration": 120,
+          "timeRange": ["21:00-23:00"]
         },
-        "social": {
-          "hangOutAtABar": {
-            "duration": 120,
-            "timeRange": ["9pm-11pm"]
-          },
-          "haveAMealWithFriends": {
-            "duration": 90,
-            "timeRange": ["11am-1pm", "5pm-8pm"]
-          },
-          "playBoardGames": {
-            "duration": 60,
-            "timeRange": ["8pm-11pm"]
-          },
-          "goToAMovieWithFriends": {
-            "duration": 120,
-            "timeRange": ["8pm-11pm"]
-          }
+        "haveAMealWithFriends": {
+          "duration": 90,
+          "timeRange": ["11:00-13:00", "17:00-20:00"]
+        },
+        "playBoardGames": {
+          "duration": 60,
+          "timeRange": ["20:00-23:00"]
+        },
+        "goToAMovieWithFriends": {
+          "duration": 120,
+          "timeRange": ["20:00-23:00"]
         }
       }
     }
