--- a/nudge-config.json
+++ b/nudge-config.json
@@ -2,15 +2,14 @@
   "key": "Newton438",
   "incoming": ["primary"],
   "outgoing": ["email"],
-  "ignore": [6, 0],
+  "ignore": [],
   "bounds": {
     "lower": 8,
     "upper": 12
   },
   "suggestion": {
     "start": "07",
-    "end": "23",
-    "max": 2
+    "end": "23"
   },
   "suggestionText": "Seems you have some free time on your calendar today. <br/> Why don't you fill it in with your project or works! Better productivity, better rewards!",
   "userUsageTypes": {
