--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-json-tree": "^0.11.2",
     "react-modal": "^3.8.1",
     "react-redux": "^6.0.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "requestretry": "^4.0.0"
