--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^3.0.5",
     "canvas": "^2.4.1",
     "d3": "^5.9.2",
+    "eventbrite": "^1.2.1",
     "export-to-csv": "^0.2.1",
     "fetch": "^1.1.0",
     "googleapis": "^37.1.0",
