--- a/nudge-config.json
+++ b/nudge-config.json
@@ -62,7 +62,7 @@
           "timeRange": ["08:00-10:00", "17:00-19:00", "21:00-22:00"],
           "keyword": "Workout"
         },
-        "playBasketball": {
+        "playSportGames": {
           "duration": 60,
           "timeRange": ["08:00-10:00", "16:00-18:00"],
           "keyword": "Basketball"
@@ -88,7 +88,7 @@
     },
     "leisure": {
       "personal": {
-        "readAFictionBook": {
+        "readABook": {
           "duration": 60,
           "timeRange": ["20:00-23:00"],
           "keyword": "Fiction books"
